# robot_control

./: .gitmodules  README.md  packages_setup.sh
.github/workflows/: package_building.yaml
robot_control_pkg/: CMakeLists.txt  package.xml
robot_control_pkg/launch/: multi_tbsim_bringup.launch.py  multi_tbsim_drive.launch.py  tbsim_bringup.launch.py
robot_control_pkg/src/: drive_node.cpp  multi_vel_pub.cpp  spiral_motion.cpp
